src/_css/base/_buttons.scss
@use "../utilities/breakpoint";

button,
.button {
    transition: all 0.25s ease;
    cursor: pointer;
    outline: 1px solid transparent;
    outline-offset: -2px;
    border: 1px solid lightgrey;
    border-radius: 4px;
    background-color: var(--bg-color);
    color: var(--text-color);

    &:not([class]) {
        &:hover,
        &:focus-visible {
            outline: 1px solid lightgrey;
        }
    }

    &:disabled {
        background-color: var(--limit-color);
    }
}

.help-buttons {
    display: grid;
    position: fixed;
    top: 1rem;
    right: 1rem;
    grid-template-columns: repeat(7, 25px);
    grid-auto-flow: row;
    gap: 0.5ch;
    z-index: 200;
    box-shadow: 0 0 10px var(--bg-color);
    background-color: var(--bg-color);

    @include breakpoint.mobile-and-tablet-only {
        position: initial;
        grid-template-columns: repeat(7, 25px);
        grid-template-areas:
            "settings changelog help statblock statblock ta ta"
            ". patreon discord statblock statblock ta ta";
        justify-content: flex-end;
        box-shadow: none;
        background-color: transparent;
        width: 100%;

        .tabletop-almanac-button {
            grid-area: ta;
        }

        .patreon-button {
            grid-area: patreon;
        }

        .statblock-button {
            grid-area: statblock;
        }

        .settings-button {
            grid-area: settings;
        }

        .discord-button {
            grid-area: discord;
        }

        .change-log-button {
            grid-area: changelog;
        }

        .help-button {
            grid-area: help;
        }

        .change-log-button {
            &.ignored {
                animation: changeColor 1s ease-in-out 0s 30 alternate;
            }
        }

        &.statblock {
            display: flex;

            .top-button {
                width: 20px;
                height: 21px;
                font-size: 0.7rem;
            }
        }
    }
}

.top-button {
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all ease-in-out 0.25s;
    cursor: pointer;
    border: 1px solid white;
    border-radius: 5px;
    background-color: var(--bg-color);
    padding-top: 2px;
    padding-inline: 0;
    width: 25px;
    height: 25px;
    font-size: 1.2rem;
    text-align: center;

    &:hover {
        svg {
            fill: var(--bg-color);
        }
    }

    &.close {
        top: 4.5ch;
    }

    &:hover,
    &focus {
        background-color: white;
        color: #242424;
    }

    svg {
        width: calc(100% - 4px);
        height: calc(100% - 4px);
        object-fit: contain;
        object-position: center;
        fill: #dddddd;
        transition: all 0.25s ease;
    }

    &.link {
        padding: 0;
        width: 23px;
        height: 23px;

        svg {
            padding: 2px;
        }
    }

    .square {
        margin: auto;
        border: 1px solid white;
        width: 10px;
        height: 10px;

        &:hover {
            border-color: var(--bg-color);
        }
    }

    &.tabletop-almanac-button,
    &.statblock-button {
        grid-row: span 2;
        grid-column: span 2;
        width: 100%;
        height: 100%;
        overflow: hidden;
    }

    &.statblock-button {
        position: relative;

        &.open {
            &::before {
                position: absolute;
                top: 50%;
                left: 50%;
                translate: -50% -50%;
                rotate: -45deg;
                transition: background-color 0.25s ease;
                background-color: white;
                width: 2px;
                height: 120%;
                content: "";
            }

            &:focus-visible,
            &:hover {
                &::before {
                    background-color: var(--bg-color);
                }
            }
        }

        svg {
            scale: 1.3;
            overflow: hidden;
        }
    }

    &.tabletop-almanac-button {
        width: calc(100% - 2px);
        height: calc(100% - 2px);
        svg {
            translate: 2px 0;
            scale: 2;
        }
    }
}

.toggle-button {
    cursor: pointer;
    border: none;
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    background-color: transparent;
    width: 30px;
    height: 30px;
}

.button-wrapper {
    display: inline-block;
    position: relative;

    &.disabled {
        .dice-button {
            background-color: darkgrey;

            &:hover,
            &:focus {
                svg {
                    animation: none;
                }
            }
        }
    }

    &.three-d-dice {
        margin-bottom: 2px;
        border-radius: 4px;
        background: linear-gradient(to top, grey 50%, transparent);
        height: 24px;

        .dice-button {
            transition: all 0.25s ease;

            &:hover,
            &:focus-visible {
                translate: 0 2px;
                outline-color: transparent;
            }
        }
    }

    .dice-button {
        display: inline-flex;
        align-items: center;
        gap: 2px;
        padding: 2px 2px;
        font-size: 0.8rem;
        font-family: monospace;

        .dice-preview {
            display: flex;
            height: 15px;

            img,
            svg {
                width: 15px;
                max-height: 15px;
                object-fit: contain;
            }

            svg {
                fill: white;
                padding-inline: 2px;
            }
        }

        &:hover,
        &:focus {
            img,
            svg {
                animation: shaking 0.2s alternate linear infinite;
            }
        }

        &.rolling {
            overflow: hidden;
            img,
            svg {
                animation: rotating 0.5s linear infinite;
            }
        }

        &.limit {
            background-color: var(--limit-color);
        }
    }

    .dice-context-button {
        display: flex;
        flex-direction: column;
        z-index: 10;
        border: 1px solid lightgrey;
        border-radius: 4px;
        background-color: var(--bg-color);
        padding: 1px;
        width: min-content;

        button {
            --hover-color: lightgrey;
            transition: all 0.25s ease;
            border: none;
            border-radius: 0;
            width: 100%;
            text-align: left;

            &.advantage {
                --hover-color: rgba(0, 255, 0, 0.6);
            }

            &.disadvantage {
                --hover-color: rgba(255, 0, 0, 0.6);
            }

            &.crit {
                --hover-color: rgba(150, 0, 255, 1);
            }

            &:hover,
            &:focus {
                background-color: var(--hover-color);
                color: var(--bg-color);
            }
        }
    }
}

.sort-toggle {
    position: relative;
    outline: 3px solid transparent;
    border-width: 2px;
    width: 20px;

    &:hover,
    &:focus-visible {
        outline: 3px solid lightgrey;
    }

    &.active {
        &::after,
        &::before {
            position: absolute;
            top: 50%;
            left: 50%;
            translate: -50% -49%;
            rotate: 40deg;
            background-color: lightgrey;
            width: 3px;
            height: 80%;
            content: "";
        }

        &::before {
            rotate: -40deg;
        }
    }
}


.help-buttons {
    display: flex;
    flex-wrap: wrap;
    gap: 0.25rem;
    justify-content: flex-end;
    
    @media (max-width: 768px) {
        flex-direction: row;
        align-items: flex-end;
        
        .top-button {
            width: 35px;
            height: 35px;
        }
    }
}

